--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.9.1",
+    "date-fns": "^2.30.0",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
